# etl-full

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app_streamlit.py
app/extract/: extract.py
app/load/: to_bigquery.py  to_csv.py  to_directory.py  to_xlsx.py
app/transform/: merge.py  transform.py  validate.py
consultas_sql/: consultas.sql
data/by_client/: AA_JOÃO_21-08-2025.csv  AA_JOÃO_22-08-2025.csv  BB_PEDRO_21-08-2025.csv  BB_PEDRO_22-08-2025.csv  CC_MARIA_21-08-2025.csv  CC_MARIA_22-08-2025.csv  DD_RICARDO_21-08-2025.csv  DD_RICARDO_22-08-2025.csv  EE_MARIA_21-08-2025.csv  EE_MARIA_22-08-2025.csv  FF_MATHEUS_21-08-2025.csv  FF_MATHEUS_22-08-2025.csv  HH_MARIA_21-08-2025.csv  HH_MARIA_22-08-2025.csv  II_MARIA_21-08-2025.csv  II_MARIA_22-08-2025.csv  JJ_MATHEUS_21-08-2025.csv  JJ_MATHEUS_22-08-2025.csv  KK_RICARDO_21-08-2025.csv  KK_RICARDO_22-08-2025.csv  LL_RICARDO_21-08-2025.csv  LL_RICARDO_22-08-2025.csv  MM_BIANCA_21-08-2025.csv  MM_BIANCA_22-08-2025.csv  NN_BIANCA_21-08-2025.csv  NN_BIANCA_22-08-2025.csv  OO_BIANCA_21-08-2025.csv  OO_BIANCA_22-08-2025.csv  PP_PEDRO_21-08-2025.csv  PP_PEDRO_22-08-2025.csv
data/processed/: analise_consolidada.csv  estoque.xlsx  ruptura_faltaproduto.xlsx  vendas.xlsx
data/raw/: 02_Case_Analista de Dados_ Dados.xlsx  base.xlsx  ~$02_Case_Analista de Dados_ Dados.xlsx
logs/: erros_validacao_estoque.csv  erros_validacao_vendas.csv
src/: pipeline.py
src/extract/: extract.py
src/load/: to_bigquery.py  to_contact.py  to_csv.py  to_directory.py  to_xlsx.py
src/transform/: merge.py  (+2 more)
(+2 files in other folders)
