[project]
name = "case-tecnico"
version = "0.1.0"
description = "Case Técnico - Processo Seletivo GB"
authors = [
    {name = "Jéssica Barros",email = "jessyca.lais.cdb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandera (>=0.26.0,<0.27.0)",
    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "streamlit (>=1.49.0,<2.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-api-python-client (>=2.179.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
